<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">""</string>
    <string name="app_id">""</string>
    <string name="service_id">""</string>
    <string name="chcode">""</string>
    <string name="authorities">""</string>

    <string name="text_music_name">歌曲名</string>
    <string name="text_singer_name">歌手名</string>
    <string name="text_previous">上一首</string>
    <string name="text_play">播放</string>
    <string name="text_pause">暂停</string>
    <string name="text_next">下一首</string>

    <string name="text_vip">"会员专享"</string>
    <string name="text_recommend">"咪咕推荐"</string>
    <string name="text_original_list">"排行榜单"</string>
    <string name="text_exchange">兑换</string>
    <string name="text_favorites">我的收藏</string>
    <string name="text_search">搜索</string>

    <string name="text_item_favorites">收藏</string>
    <string name="text_item_ring">设为振铃</string>
    <string name="text_item_ringtone">设为彩铃</string>
    <string name="text_item_download">下载</string>
    <string name="text_item_more">更多</string>
    <string name="text_empty_view">好音乐马上就来</string>
    <string name="text_loading">加载中</string>
    <string name="text_unknown">未知</string>
    <string name="text_time">00:00 | 00:00</string>

    <string name="text_banners">广告条</string>
    <string name="not_china_mobile_sim">请插入中国移动的手机卡</string>
    <string name="init_failed">初始化失败</string>
    <string name="set_vibrate_ring_success">设置来电铃声成功</string>
    <string name="set_vibrate_ring_failed">设置来电铃声失败</string>
    <string name="search_failed">没有找到相关的歌曲</string>

    <string name="image_view_content_description">TODO</string>

    <string name="original_header_chart_code_cp">"cp_month"</string>
    <string name="original_header_chart_code_list">"local_music_list"</string>

    <string name="migu_pkg_name">"cmccwm.mobilemusic"</string>
    <string name="migu_cls_name">"cmccwm.mobilemusic.ui.activity.PreSplashActivityMigu"</string>
    <string name="url_migu_index">"http://wm.10086.cn/view/wap/musicindex.do?cType=sst_client&amp;nodeId=7638&amp;cid=014002C"</string>

    <string name="text_hint_not_vip">"您还不是包月会员用户,订购包月会员后您将获得如下权益"</string>
    <string name="text_vip_rights_list">"1.会员在线试听所有曲目\n2.会员专享曲目免费下载\n3.会员专享曲目彩铃订制\n4.会员专享曲目每月更新10首"</string>
    <string name="text_order">"点击订购按钮进行订购"</string>
    <string name="text_order_vip">"订购"</string>

    <string name="text_vip_rights_list_title">"权益列表"</string>
    <string name="text_ok">"确定"</string>
    <string name="text_cancel">"取消"</string>

    <string name="text_permission">"权限请求"</string>
    <string name="text_agree">"同意"</string>
    <string name="text_forbid">"拒绝"</string>

    <string name="text_request_permissions">"应用程序需要以下权限:\n1.读写存储卡\n2.读取联系人\n3.读取手机状态\n4.发送短信\n5.读写设置"</string>

</resources>
