<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:minHeight="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/text_search"
            android:onClick="navigateSearch"
            android:src="@drawable/ic_search" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9" />

    <RadioGroup
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:checkedButton="@+id/btn_vip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_vip"
            style="@style/MainItemStyle"
            android:onClick="navigateVip"
            android:text="@string/text_vip" />

        <RadioButton
            android:id="@+id/btn_recommend"
            style="@style/MainItemStyle"
            android:onClick="navigateRecommend"
            android:text="@string/text_recommend" />

        <RadioButton
            android:id="@+id/btn_top"
            style="@style/MainItemStyle"
            android:onClick="navigateOriginal"
            android:text="@string/text_original_list" />

        <RadioButton
            android:id="@+id/btn_favorites"
            style="@style/MainItemStyle"
            android:onClick="navigateFavorites"
            android:text="@string/text_favorites" />

    </RadioGroup>

    <View android:id="@+id/indicator"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <include
        android:id="@+id/player_panel"
        layout="@layout/music_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</LinearLayout>